--- a/pizza-to-go-server/src/main/webapp/css/site.css
+++ b/pizza-to-go-server/src/main/webapp/css/site.css
@@ -154,6 +154,8 @@ footer {
   background-color: rgb(240, 240, 240);
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  height: 150px;
+  position:relative; 
 }
 
 .animal h4 {
@@ -178,31 +180,224 @@ footer {
   margin: 0 0 1rem 0;
 }
 
-.species {
-  font-size: 0.9rem;
-  color: #888;
-  vertical-align: middle;
-}
-
-.foods-list {
-  margin: 0;
-  padding: 0;
-  position: relative;
-  left: 17px;
-  font-size: 0.85rem;
-  line-height: 1.5;
-}
 
 
 
+ /* button hinzufügen */
 .hinzufuegen{
- width: 100px; 
- height: 30px; 
- float: right; 
- margin-right: 10px; 
- background-color: dodgerblue; 
+  
+  border-bottom-right-radius: 8px;
+  width: 40px; 
+  height: 40px; 
+  background-color:  rgb(182, 182, 182); 
+  color: white;   
+  border: 1.5px solid rgb(182, 182, 182);   
+  text-decoration: none;
+  margin-left: 10px ; 
+  font-size: 20px;
+}
+
+.hinzufuegen:hover,.hinzufuegen:active {
+  background-color: dodgerblue;
+  border-color:  dodgerblue;
+  }
+
+
+
+#price{
+
+  position:absolute;
+ bottom:0;
+ left :0;
+ margin-left:  160px;
+ margin-bottom: 10px;
+}
+#sup{
+
+  border-radius:50px;
+  font-size:15px;
+  color: dodgerblue;
+  line-height:10px;
+  text-align:center;
+  font-weight: bold;
+  background: white
+}
+
+
+/* ShowWarenkorb */
+
+.showWarenkorb {
+  max-width: 650px;
+  margin : 15px; 
+  max-height: 150px;
+  /* margin: 15px auto; */
+  border-radius: 2px;
+  background-color: rgb(240, 240, 240);
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  position:relative; 
+  height: 100px;
+  width: 90%;
+}
+
+.showWarenkorb h4 {
+  margin: 0 0 0 0;
+  
+}
+
+.photo {
+  float: left;
+  width: 40%;
+  margin-right: 10px;
+  margin-left: 0px;
+  padding-left: 0 px;
+  width: 140px; 
+  height: 150px
+}
+
+.anzahl{
+
+  position:absolute;
+ bottom:0;
+ left: 0;
+ /* padding-right: 50px; */
+}
+
+.plus{
+
+  width: 40px; 
+  height: 40px; 
+ 
+  /* margin-right: 10px;  */
+  background-color:  rgb(182, 182, 182); 
+  color: white;   
+  border: 1.5px solid rgb(182, 182, 182);   
+  text-decoration: none;
+  margin-right: 10px;
+}
+
+.minus{
+
+  width: 40px; 
+  height: 40px; 
+ 
+  /* margin-right: 10px;  */
+  background-color:  rgb(182, 182, 182); 
+  color: white;   
+  border: 1.5px solid rgb(182, 182, 182);   
+  text-decoration: none;
+  
+}
+#preis{
+  font-size: 18px;
+  font-weight: bold;
+ 
+
+}
+
+#preis2{
+  font-size: 20px;
+  font-weight: bold;
+  color: dodgerblue;
+  margin-right: 10px;
+
+
+}
+.name {
+  font-size: 22px;
+  font-weight: bold;
+  margin: 0 0 1rem 0;
+  padding: 10px 10px 0 5px;
+}
+
+.description {
+  font-size: 16px;
+  font-weight: normal;
+  margin: 0 0 1rem 0;
+  padding: 10px 10px 0 10px;
+  max-height: 40px;
+  overflow: hidden;
+}
+#description2{
+
+  max-height: 50px;
+  overflow: auto;
+
+}
+ /* button hinzufügen */
+.löschen{
+ width: 40px; 
+ height: 40px; 
+
+ /* margin-right: 10px;  */
+ background-color:  rgb(182, 182, 182); 
  color: white;   
- border: 1.5px solid dodgerblue;   
+ border: 1.5px solid rgb(182, 182, 182);   
  text-decoration: none; 
- border-radius: 4px;
+ /* border-radius: 4px; */
+
+ font-size: 20px;
+}
+
+.löschen:hover,.löschen:active {
+  background-color: dodgerblue;
+  border-color:  dodgerblue;
+  }
+
+#preis3,#info_zurück{
+  float:right;
+  position:absolute;
+  bottom:0;
+  right: 0;
+}
+
+
+
+.mehrinfos{
+
+  max-width: 650px;
+  /* padding: 20px; */
+  margin: 15px auto;
+  border-radius: 8px;
+  background-color: rgb(240, 240, 240);
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  height: 350px;
+  position:relative;
+}
+
+#td_img{
+
+  width :200px;
+  height :200px; 
+  padding:0 0 20px 0;
+}
+
+.photo{
+
+  width :100%;
+  height :100%;
+  border-top-left-radius: 8px;
+}
+
+#summe_preis{
+
+  text-align: right;
+  font-size: 25px;
+  width: 100%;
+  padding-right: 15px;
+}
+
+#payment_button{
+
+ 
+  background-color:  dodgerblue;
+  color: white;   
+  border: 1.5px solid dodgerblue; 
+  /* text-decoration: none; */
+  border-radius: 3px;
+  font-size: 16px;
+  padding: 5px 5px;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
